--- a/car_blog/carBlog/package.json
+++ b/car_blog/carBlog/package.json
@@ -12,16 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "^7.3.3",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "~7.2.0",
     "@angular/http": "^7.2.4",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
-    "ng-simple-slideshow": "^1.2.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -29,11 +30,11 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -46,28 +47,5 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
-  },
-  "deprecated": false,
-  "description": "A simple, responsive slideshow for Angular 4+.",
-  "homepage": "https://github.com/dockleryxk/ng-simple-slideshow",
-  "keywords": [
-    "angular",
-    "angular 2",
-    "angular 4",
-    "angular 5",
-    "angular 6",
-    "ng",
-    "ngx",
-    "ng2",
-    "ng4",
-    "ng5",
-    "ng6",
-    "slideshow",
-    "carousel",
-    "slider",
-    "angular2",
-    "angular4",
-    "angular5",
-    "angular6"
-  ]
+  }
 }
