--- a/car_blog/package.json
+++ b/car_blog/package.json
@@ -17,8 +17,12 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "gridfs-stream": "^1.1.1",
     "json": "^9.0.6",
+    "method-override": "^3.0.0",
     "mongoose": "^5.0.10",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "npm": "^6.7.0",
     "path": "^0.12.7",
     "socket.io": "^2.2.0"
