--- a/login_registration/package.json
+++ b/login_registration/package.json
@@ -13,7 +13,7 @@
     "app": "^0.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.7.0",
-    "ejs": "^1.0.0",
+    "ejs": ">=2.5.5",
     "express": "^4.8.7",
     "express-session": "^1.7.6",
     "json": "^9.0.6",
